index+slider+animate 1 block

--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -4,7 +4,7 @@ include _mixins.pug
 .mob-menu
 	.modal-menu
 		.modal-menu-inner
-			button.modal-menu__close-btn
+			button.modal-menu__close-btn.js-menu
 				+icon('close')
 			.modal-menu__header
 				a.header-logo(href="/")
