--- a/src/sass/lib/_mixins.sass
+++ b/src/sass/lib/_mixins.sass
@@ -323,13 +323,13 @@
 	font-style:  $font-s
 
 =link-btn( $color, $bg-color, $bg-hover : $bg-color, $bg-active : $bg-color)
-	font-size: 1rem
+	font-size: 16px
 	display: inline-block
 	text-decoration: none
 	background-color: $bg-color
 	color: $color
-	padding-left: 1.7em
-	padding-right: 1.7em
+	padding-left: 23px
+	padding-right: 23px
 	line-height: 3em
 	border-radius: 5px
 	+tr(all .3s ease)
