--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -17,7 +17,7 @@
 		margin-left: auto
 		margin-right: 0
 	&__item
-		margin-right: 2.2rem
+		margin-right: 38px
 		&:last-child
 			margin-right: 0
 	&__link
@@ -28,6 +28,9 @@
 		+tr(color .3s ease)
 		&:hover
 			color:#917d12
+	+r(1024)
+		&__item
+			margin-right: 32px
 	+r(980)
 		&__list
 			margin-left: 0
@@ -56,7 +59,7 @@
 .nav-burger
 	display: block
 	width: 25px
-	padding: 7px
+	padding: 3px 5px
 	box-sizing: content-box
 	&__line
 		display: block
@@ -75,8 +78,8 @@
 		display: block
 	&__mob
 		display: none
-		width: 1rem
-		height: 1rem
+		width: 25px
+		height: 18px
 	+r(980)
 		border: none
 		padding: 0
@@ -85,3 +88,165 @@
 			display: none
 		&__mob
 			display: flex
+
+
+.mob-menu
+	position: fixed
+	top: 0
+	right: 0
+	width: 100%
+	height: 100%
+	background-color: transparent
+	z-index: 50
+	transition: opacity .5s .1s, visibility .5s .1s, background-color .5s .1s
+	opacity: 0
+	visibility: hidden
+	&.active
+		opacity: 1
+		visibility: visible
+		background-color: rgba(#000000, .3)
+		transition-delay: 0s!important
+		& .modal-menu
+			transform: translateX(0)
+			opacity: 1
+
+.modal-menu
+	background-color: #ffffff
+	width: 100%
+	height: 100%
+	max-width: 1094px
+	position: fixed
+	top: 0
+	left: 0
+	z-index: 100
+	opacity: 0
+	transform: translateX(-20%)
+	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
+	&-inner
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+		width: 100%
+		height: 100%
+		padding: 59px 68px 15px 130px
+	&-body
+		+vertical
+		width: 100%
+		text-align: left
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+	&__close-btn
+		display: block
+		width: 22px
+		height: 22px
+		color: #000000
+		position: absolute
+		top: 20px
+		right: 20px
+	&__header
+		margin-bottom: 10px
+		width: 100%
+	&__nav
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+		margin-bottom: 65px
+		width: 100%
+		a
+			display: block
+	&__menu
+		width: 31%
+		a
+			font-weight: bold
+			color:#000000
+			font-size: 18px
+			line-height: 1.5
+			margin-bottom: 30px
+		&_lvl
+			padding-left: 32px
+			a
+				margin-bottom: 11px
+	&__sub-menu
+		border-top: 1px solid #cccccc
+		// margin-top: 18px
+		padding-top: 16px
+		a
+			font-weight: normal
+			color: #767a7d
+			font-size: 16px
+			line-height: 1.5
+			margin-bottom: 16px
+	&__contacts
+		width: 100%
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+	&__info
+		width: 31%
+		&_lvl
+			padding-left: 32px
+	&__link-wrap
+		font-size: 20px
+		line-height: 1.2
+		font-weight: bold
+		letter-spacing: -0.02em
+		margin-bottom: 10px
+		a
+			color: #000000
+	&__mail-wrap
+		font-size: 16px
+		line-height: 1.5
+		a
+			color: #000000
+	&__c-title
+		margin-bottom: 15px
+		&_inner
+			margin-top: 30px
+			margin-bottom: 10px
+	+r(1024)
+		&-inner
+			padding: 45px 38px 15px 60px
+	+r(768)
+		overflow-y: scroll
+		&-inner
+			padding: 45px 25px 15px 40px
+		&__nav
+			width: 50%
+			padding-right: 20px
+		&__contacts
+			width: 50%
+			padding-left: 20px
+		&__menu
+			width: 100%
+			&_lvl
+				padding: 0
+				margin-bottom: 30px
+		&__sub-menu
+			display: none
+		&__info
+			width: 100%
+			&_lvl
+				padding: 0
+			&_empty
+				display: none
+	+r(620)
+		&-inner
+			padding: 52px 16px 30px 16px
+		&__close-btn
+			top: 19px
+			right: 19px
+		&__header
+			margin-bottom: 50px
+		&__nav
+			width: 100%
+			padding: 0
+			padding-left: 40px
+			margin-bottom: 0
+		&__contacts
+			width: 100%
+			padding: 0
+			padding-left: 44px
+		&__info
+			&_lvl
+				margin-top: 20px
