--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -24,7 +24,7 @@
 	font-weight: 800
 
 .text-primary
-	font-size: 1rem
+	font-size: 16px
 	line-height: 1.5
 	color: #767a7d
 	font-weight: 400
@@ -32,23 +32,23 @@
 		color: #000000
 
 .text-increased
-	font-size: 1.25rem
+	font-size: 20px
 	line-height: 1.7
 	color: rgba(#000000, .8)
 	font-weight: 400
 
 .text-small
-	font-size: 0.875rem
+	font-size: 14px
 	line-height: 1.714
 	color: #767a7d
 	font-weight: 400
 
 .box
 	width: 100%
-	max-width: 78.5rem
+	max-width: 1256px
 	height: 100%
 	margin: 0 auto
-	padding: 0 1rem
+	padding: 0 16px
 	
 .link-button
 	+link-btn( #000000,$main-decor-color, #f2db00, #edcd1c)
@@ -87,17 +87,21 @@
 		&__link
 			max-width: 110px;
 .link-more
-	display: flex
-	align-items: center
+	display: inline-block
 	color: #000000
-	font-size: 1.125rem
+	font-size: 18px
 	line-height: 1.333
 	font-weight: bold
+	position: relative
+	padding-right: 40px
 	&__arrow
+		position: absolute
+		top: 50%
+		right: 0
+		transform: translateY(-50%)
 		display: inline-block
-		width: 1.5625rem
-		height: 1.5625rem
-		margin-left: 0.8125rem
+		width: 25px
+		height: 25px
 		color: rgb(172, 174, 176);
 		+tr(color .3s ease)
 	&:hover &__arrow
@@ -120,7 +124,9 @@
 	z-index: 7
 	top: 97px
 	left: 50%
-	transform: translateX(-50%)
+	transform: translate(-50%, -40px)
+	opacity: 0
+	+tr(all .5s ease .5s)
 	&__phones
 		display: flex
 	&__link
@@ -136,21 +142,22 @@
 			font-size: 0.5625rem
 			line-height: 1
 			max-width: 3rem
+	&.active
+		transform: translate(-50%, 0)
+		opacity: 1
 	+r(768)
 		&__phones
 			display: none
 
 .service-card
-	width: 31.781%
-	display: flex
-	flex-direction: column
-	align-items: flex-start
-	+box
+	height: 100%
+	width: 30%
 	border: 1px solid #cccccc
 	padding: 2.375rem 2.09rem 2.09375rem 2.09rem
 	background-color: #ffffff
 	position: relative
 	z-index: 1
+	margin-right: 20px
 	+tr(all .3s ease)
 	&__title
 		width: 100%
@@ -218,7 +225,7 @@
 	+r(768)
 		&__item
 			width: 45%
-			margin-bottom: 2.25rem
+			margin-bottom: 16px
 		&__value
 			font-size: 2.375rem
 		&_data
@@ -230,10 +237,10 @@
 		display: flex
 		width: 90%
 	&__img
-		width: 10.78rem
-		margin-right: 2rem
+		width: 30%
 	&__short
-		max-width: 19.375rem
+		max-width: 70%
+		padding-left: 30px
 	&__text
 		color: #000000
 	+r(980)
@@ -241,7 +248,23 @@
 		margin-bottom: 20px
 		&__inner
 			width: 95%
-
+	+r(620)
+		max-width: 400px
+		margin: 0 auto
+		margin-bottom: 30px
+		&__inner
+			width: 100%
+			flex-wrap: wrap
+		&__img
+			width: 100%
+			img
+				width: 100%
+		&__short
+			width: 100%
+			padding: 0
+			margin-top: 25px
+		&__text
+			margin-bottom: 10px
 .v-style-text
 	display: inline-block
 	position: relative
@@ -305,7 +328,7 @@
 	
 	
 	video
-		position: fixed
+		position: absolute
 		z-index: 0
 		bottom: 0
 		min-height: 100%
@@ -368,3 +391,46 @@
 		&__photo
 			max-height: 158px
 			max-width: 158px
+
+/* sliders */
+.custom_dots
+	font-size: 0
+	margin-top: 10px
+	margin-bottom: 10px
+	li
+		display: inline-block
+		position: relative
+		margin-right: 12px
+		&:last-child
+			margin-right: 0
+		&::after
+			content: ''
+			display: block
+			cursor: pointer
+			width: 34px
+			height: 2px
+			background-color: #ffffff
+			opacity: .7
+			position: absolute
+			left: 0
+			top: 50%
+			+tr(all .5s ease)
+		&.slick-active
+			&::after
+				background-color: #fff233
+				opacity: 1
+				height: 4px
+				+tr(all .5s ease)
+	&_black
+		li
+			&::after
+				background-color: #000000
+				opacity: .4
+			&.slick-active
+				&::after
+					background-color: #000000
+	button
+		display: block
+		width: 34px
+		height: 34px
+		font-size: 0
