--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ block content
 			.video-container
 				video.fillWidth(autoplay='', loop='',data-src='img/video.mp4', type='video/mp4')
 		.box
-			.header-inner.header-inner__animate
+			.header-inner.header-inner_animate
 				.header-inner__title.header-inner__title_offset
 					h1.h1 Крупнейший в Беларуси сертифицированный дата-центр
 					a(href="#").link-button Посмотреть услуги
@@ -38,7 +38,7 @@ block content
 							.promo-reclame__icon
 								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 62.9 58"><path fill="#fff" d="M31.5 0A31.5 31.5 0 0 0 0 31.5a32 32 0 0 0 9.1 22.4l.2.1h44.4l.1-.1a31.59 31.59 0 0 0 9.1-22.4A31.35 31.35 0 0 0 31.5 0zm21.8 53H9.7A30.58 30.58 0 0 1 53.1 9.9 30.36 30.36 0 0 1 62 31.5 30.74 30.74 0 0 1 53.3 53z"/><path fill="#fff" d="M23.9 37.2a9.5 9.5 0 1 1 15.2 0l.8.6a10.5 10.5 0 1 0-16.8 0zM11.5 58h40v-1h-40"/><path fill="#f9e220" d="M31 46.5v2h1v-2m-5 0v2h1v-2m7 0v2h1v-2m3 0v2h1v-2m-17 0v2h1v-2"/><path fill="#f9e220" d="M31.5 6a25.5 25.5 0 0 0-20.4 40.8l.8-.6A24.35 24.35 0 0 1 7 32h2.5v-1H7a24.44 24.44 0 0 1 6.8-16.5l2.3 2.3.7-.7-2.3-2.3A24.44 24.44 0 0 1 31 7v2.5h1V7a24.44 24.44 0 0 1 16.5 6.8l-2.3 2.3.7.7 2.3-2.3A24.44 24.44 0 0 1 56 31h-2.5v1H56a24.35 24.35 0 0 1-4.9 14.2l.8.6A25.5 25.5 0 0 0 31.5 6z"/><path fill="#f9e220" d="M48.5 28.7l-.2-1-13.6 2.5a3.38 3.38 0 0 0-3.2-2.2 3.5 3.5 0 1 0 3.5 3.5v-.3zm-17 5.3a2.5 2.5 0 1 1 2.5-2.5 2.48 2.48 0 0 1-2.5 2.5z"/></svg>
 							p.text-primary.promo-reclame__text Уровень доступности сервисов 99,982%
-	.basic-services
+	.basic-services.fade-down
 		.box
 			h2.basic-services-title.h2 Основные услуги
 			.basic-services-wrapper
@@ -66,34 +66,11 @@ block content
 					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
 					.service-card__icon
 						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
-				a(href="#").service-card
-					h4.service-card__title.h4 Выделенные сервера
-						span.service-card__t-arrow
-							+icon('arrow-circle')
-					p.service-card__desc.text-primary Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса.
-					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-					.service-card__icon
-						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 63 63"><path fill="none" stroke="currentcolor" d="M62.5 31.5H.5" stroke-linejoin="round"/><circle cx="31.5" cy="31.5" r="31" fill="none" stroke="currentcolor" stroke-miterlimit="10"/><path fill="none" stroke="currentcolor" d="M18.2 41.5a63.65 63.65 0 0 1-.7-10c0-17.1 6.3-31 14-31 5.1 0 9.5 6 12 15m1.3 6a63.65 63.65 0 0 1 .7 10c0 17.1-6.3 31-14 31-5.1 0-9.5-6-12-15" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M15.5 43.5c-9-2.5-15-6.9-15-12 0-7.7 13.9-14 31-14a78.47 78.47 0 0 1 10 .7m6 1.3c9 2.5 15 6.9 15 12 0 7.7-13.9 14-31 14a78.47 78.47 0 0 1-10-.7" stroke-linejoin="round"/><circle cx="44.5" cy="18.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><circle cx="18.5" cy="44.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M26.5 25.5h2m2 0h2m2 0h2m-10 12h2m2 0h2m2 0h2" stroke-linejoin="round"/></svg>
-				a(href="#").service-card
-					h4.service-card__title.h4 IaaS
-						span.service-card__t-arrow
-							+icon('arrow-circle')
-					p.service-card__desc.text-primary Позволяет клиенту воспользоваться полноценным ИТ-сервисом, получая необходимый инфраструктурный комплекс решений в рамках виртуальной инфраструктуры velcom
-					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-					.service-card__icon
-						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
-				a(href="#").service-card
-					h4.service-card__title.h4 IaaS
-						span.service-card__t-arrow
-							+icon('arrow-circle')
-					p.service-card__desc.text-primary Позволяет клиенту воспользоваться полноценным ИТ-сервисом, получая необходимый инфраструктурный комплекс решений в рамках виртуальной инфраструктуры velcom
-					span.service-card__link.link-button.link-button_small(href="#") Узнать больше
-					.service-card__icon
-						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
+				
 			.server-graph(style="background-image:url('img/graph.gif')")
 				p.server-graph__title 99,982%
 				p.server-graph__desc.text-primary Уровень доступности сервисов
-	.about-center
+	.about-center.fade-down
 		.box
 			.about-center__inner
 				.about-center__title
@@ -113,7 +90,7 @@ block content
 					img(src="img/data-canter.png", alt="clouds")
 		.about-center__clouds
 			img(src="img/clouds.png", alt="clouds")
-	.advantages
+	.advantages.fade-down
 		.box
 			h2.h2.advantages__title Размещение ИТ&#8209;инфраструктуры в ЦОД существенно снижает расходы на эксплуатацию и управление:
 			.advantages__slider
@@ -145,7 +122,7 @@ block content
 				a(href="#").link-consultation Получить консультацию
 			.advantages__slider-dots
 		.advantages-decor(style="background-image:url('img/advantages-man-1.png')")
-	.main-news
+	.main-news.fade-down
 		.box
 
 			.main-news__title
