--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -8,6 +8,7 @@
 	padding-left: 1rem
 	position: fixed
 	z-index: 10
+	box-shadow: 0 0px 5px rgba(0,0,0,.4)
 	top: 0
 	left: 0
 	&__list
@@ -128,7 +129,7 @@
 		align-items: flex-start
 		width: 100%
 		height: 100%
-		padding: 59px 68px 15px 130px
+		padding: 59px 68px 35px 130px
 	&-body
 		+vertical
 		width: 100%
@@ -247,6 +248,7 @@
 			width: 100%
 			padding: 0
 			padding-left: 44px
+			margin-bottom: 50px
 		&__info
 			&_lvl
 				margin-top: 20px
