--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -130,34 +130,54 @@ body
 	&_inner-page
 		padding: 178px 0 65px
 	&_row
+		height: auto
 		flex-direction: row
-		margin-top: 13.125rem
+		align-items: flex-start
+		padding: 60px 0
 	&__title
 		display: inline-block
 		max-width: 46.875rem
 		&_offset
 			margin-top: auto
 			margin-bottom: auto
-			margin-left: 9.375rem
+			margin-left: 150px
 			padding-bottom: 20px
 		&_col
 			width: 50%
-			padding-left: 9.1875rem
+			padding: 20px 20px 20px 150px
+			box-sizing: content-box
+			-webkit-hyphens: manual
+			-ms-hyphens: manual
+			hyphens: manual
 		a
 			margin-top: 70px
 	&__desc
 		color: #ffffff
 		&_col
 			width: 50%
+			padding: 20px 50px 20px 20px
+			box-sizing: content-box
 	&__text
 		color: rgba(#ffffff, .8)
-	&__animate
+		margin-bottom: 60px
+		max-width: 90%
+	&_animate
 		transform: translateY(40px)
 		opacity: 0
 		+tr(all .5s ease .8s)
 		&.active
 			transform: translateY(0)
 			opacity: 1
+	+r(980)
+		&_row
+			flex-wrap: wrap
+		&__title
+			&_col
+				width: 100%
+		&__desc
+			&_col
+				width: 100%
+				padding: 20px 50px 20px 150px
 	+r(768)
 		padding: 90px 0 20px
 		&__title
@@ -165,7 +185,12 @@ body
 				margin-left : 0
 			a
 				margin-top: 35px
-
+			&_col
+				padding-left: 0
+		&__desc
+			&_col
+				padding-left: 0
+				padding-right: 0
 .promo-reclame
 	margin-bottom: 0
 	margin-top: auto
@@ -195,7 +220,7 @@ body
 			width: 80%
 	+r(768)
 		width: auto
-		margin-right: -70vw
+		margin-right: -500px
 		&__item
 			margin-bottom: 0px
 		&__body
@@ -204,22 +229,49 @@ body
 	
 .basic-services
 	background-color: #ffffff
-	padding-top: 5.9375rem
+	padding-top: 95px
 	// &-wrapper
 	// 	display: flex
 	// 	justify-content: space-between
 	// 	+r(1024)
 	// 		flex-wrap: wrap
 	&-title
-		font-size : 2rem
+		font-size : 32px
 		line-height : 1
-		margin-bottom: 2.8125rem
+		margin-bottom: 45px
 	&-wrapper
-		margin-right: -70vw
+		position: relative
+		&.serv_offset
+			margin-right: -30vw
+		& .slick-track,
+		& .slick-list
+			display: flex
+			align-items: stretch
+		& .slick-slide 
+			// margin-right: 30px
+			display: flex
+			align-items: stretch
+			height: 100%
+			float: none
+			& > div
+				display: flex
+				align-items: stretch
+				height: 100%
+		+r(768)
+			&.serv_offset
+				margin-right: -80vw
+		// &::after
+		// 	content: ''
+		// 	display: block
+		// 	height: 100%
+		// 	width: 20vw
+		// 	position: absolute
+		// 	right: 0
+		// 	top: 0
 
 .services-slider
 	width: 100%
-	
+
 .server-graph
 	text-align: center
 	background-color: #ffffff
@@ -416,53 +468,92 @@ body
 .data-center-slider
 	position: relative
 	z-index: 1
+	&-bg
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		& .slick-list,
+		& .slick-track,
+			height: 100%
+			width: 100%
+		& .slick-slide
+			position: relative
+			z-index: 20
+			& > div
+				width: 100%
+				height: 100%
+	&-text
+		padding: 110px 0
 	&__slide
-		height: 620px
-		background-repeat: no-repeat
-		background-size: cover
 		position: relative
 		z-index: 1
-		&:before
+		& .data-center-slider__slide-wrap
+			display: flex
+			align-items: center
+			height: 100%
+	&-arrows
+		position: absolute
+	& .slick-prev,
+	& .slick-next
+		position: absolute
+		top: 50%
+		right: 0
+		transform: translateY(-50%)
+		background-repeat: no-repeat
+		color: #ffffff
+		font-size: 0
+		background-image: url('../img/svg/arrow.svg')
+		z-index: 5
+		width: 37px
+		height: 65px
+	& .slick-prev
+		right: auto
+		left: 0
+		transform: rotate(180deg) translateY(50%)
+	& .custom_dots
+		position: absolute
+		bottom: 5%
+		left: 50%
+		transform: translateX(-50%)
+
+.data-center-bg
+	width: 100%
+	height: 100%
+	position: relative
+	background-repeat: no-repeat
+	background-size: cover
+	&:before
 			content: ''
 			display: block
 			width: 100%
 			height: 100%
 			position: absolute
-			z-index: -1
+			z-index: 1
 			left: 0
 			top: 0
 			background-color: #000000
 			opacity: .7
-
-.slick-prev,
-.slick-next
-	position: absolute
-	top: 50%
-	right: 5%
-	transform: translateY(-50%)
-	background-repeat: no-repeat
-	color: #ffffff
-	z-index: 5
-
-.slick-prev
-	right: auto
-	left: 5% 
-
-.slick-dots
-	position: absolute
-	bottom: 5%
-	left: 50%
-	transform: translateX(-50%)
+.data-dots
+	display: flex
+	width: 100%
+	align-items: center
+	justify-content: center
+	+r(768)
+		justify-content: flex-start
 
 .content-wrap
 	display: flex
+	padding-bottom: 90px
 	+r(768)
 		flex-direction: column
 
 .side-bar
 	width: 25%
-	&__nav
-		padding-bottom: 40px
+	z-index: 2
+	// &__nav
+	// 	padding-bottom: 40px
 	+r(768)
 		width: 100%
 
@@ -472,30 +563,47 @@ body
 		line-height: 1.406
 	+r(768)
 		width: 100%
+		margin-top: 30px
 		&__title
-			font-size: 1.3125rem
+			font-size: 21px
 			line-height: 1.43
 
 .content-inner-item
 	border-top: 1px solid #cccccc
-	padding-top: 4.375rem
-	padding-bottom: 3.75rem
+	padding-top: 70px
+	padding-bottom: 60px
 	position: relative
 	&__title
-		margin-bottom: 3.875rem
+		margin-bottom: 60px
 	&__decor
 		position: absolute
-		top: 4.375rem
+		top: 70px
 		right: 0
 		width: 80px
 		height: 90px
-
+		color: #f2db00
+	+r(1100)
+		padding-top: 50px
+		&__decor
+			top: 30px
+			width: 70px
+			height: 80px
+	+r(768)
+		padding-top: 40px
+		padding-bottom: 40px
+		&__title
+			margin-bottom: 40px
 
 .sertification-wrap
 	display: flex
 	align-items: flex-end
-	max-width: 44.625rem
+	max-width: 714px
 	justify-content: space-between
+	+r(620)
+		flex-wrap: wrap
+		.sertification-link
+			width: 50%
+			margin-bottom: 20px
 
 .sertification-link
 	&__img
@@ -512,13 +620,15 @@ body
 .parameters-table
 	display: flex
 	align-items: flex-start
+	+r(620)
+		flex-wrap: wrap
 
 .data-parameters
 	width: 50%
-	max-width: 23.125rem
+	max-width: 370px
 	display: flex
 	flex-wrap: wrap
-	margin-right: 2rem
+	margin-right: 30px
 	&:last-child
 		margin-right: 0
 	&__title
@@ -538,6 +648,15 @@ body
 		display: block
 		width: 30px
 		height: 20px
+	+r(620)
+		width: 100%
+		max-width: 100%
+		margin-right: 0
+		margin-bottom: 20px
+		&__check
+			width: 15px
+			height: 15px
+
 
 .data-center-details
 	background-color: #fcfcfc
@@ -588,7 +707,7 @@ body
 
 .data-center-cooperation
 	max-width: 44.625rem
-	padding: 4.25rem 0 6.875rem
+	padding: 4.25rem 0 0
 	&__promo
 		background-repeat: no-repeat
 		background-size: cover
