--- a/src/sass-old/_footer.sass
+++ b/src/sass-old/_footer.sass
@@ -4,8 +4,8 @@ footer
 	width: 100%
 	background-color: #ffffff
 	border-top: 1px solid #cacaca
-	padding-top: 65px
-	padding-bottom: 43px
+	padding-top: 4.125rem
+	padding-bottom: 2.6875rem
 	&__inner
 		display: flex
 		align-items: flex-start
@@ -19,26 +19,26 @@ footer
 		flex-wrap: wrap
 		align-content: flex-start
 	+r(590)
-		padding-top: 47px
+		padding-top: 2.9375rem
 		&__wrap
 			width: 100%
 
 .footer-contacts
 	width: 50%
 	&__title
-		margin-bottom: 42px
+		margin-bottom: 2.625rem
 	&__phone
-		font-size: 21px
+		font-size: 1.3125rem
 		line-height: 1.714
 		font-weight: bold
 	&__working-hours
-		margin-top: 24px
+		margin-top: 1.4rem
 	+r(1100)
 		width: 100%
 	+r(590)
-		margin-top: 55px
+		margin-top: 3.4375rem
 		&__title
-			margin-bottom: 32px
+			margin-bottom: 2.03125rem
 
 .footer-action
 	width: 50%
@@ -47,7 +47,7 @@ footer
 	justify-content: space-between
 	+r(1100)
 		width: 100%
-		margin-top: 37px
+		margin-top: 2.3rem
 
 .footer-more-info
 	width: 100%
@@ -61,8 +61,8 @@ footer
 		align-items: flex-start
 		width: auto
 	&__link
-		max-width: 135px
-		height: 30px
+		max-width: 8.4375rem
+		height: 1.875rem
 	+r(850)
 		&-wrap
 			flex-direction: row
@@ -73,12 +73,12 @@ footer
 			width: auto
 
 .footer-lang
-	width: 48px
+	width: 3rem
 	display: inline-block
 	border-radius: 50%
 	background-color: #f4f4f4
-	font-size: 14px
-	line-height: 48px
+	font-size: 0.875rem
+	line-height: 3rem
 	text-align: center
 
 .footer-social
@@ -87,11 +87,11 @@ footer
 	&__link
 		display: block
 		background-color: #000000
-		width: 32px
-		height: 32px
-		padding: 6px
+		width: 2rem
+		height: 2rem
+		padding: 0.4rem
 		border-radius: 50%
-		margin-right: 16px
+		margin-right: 1rem
 		color: #ffffff
 		cursor: pointer
 		+tr(all .3s ease)
@@ -133,16 +133,14 @@ footer
 			margin-right: 0
 	+r(1100)
 		justify-content: flex-start
-		margin-bottom: 32px
+		margin-bottom: 2rem
 .footer-search
 	position: relative
 	text-align: right
 	&__form
 		width: 100%
-		max-width: 245px
+		max-width: 15.375rem
 		position: relative
-		margin-right: 0
-		margin-left: auto
 		&:hover > *,
 			color: #000000
 			border-color: #000000
@@ -151,9 +149,9 @@ footer
 		display: inline-block
 		border: 1px solid #e7e7e7
 		border-radius: 40px
-		line-height: 40px
-		padding-left: 16px
-		padding-right: 16px
+		line-height: 2.5rem
+		padding-left: 1rem
+		padding-right: 1rem
 		+tr(all .3s ease)
 		&::-webkit-search-cancel-button
 			display: none
@@ -164,32 +162,29 @@ footer
 	&__field:focus + &__serch-btn
 		color: #000000
 	&__serch-btn
-		width: 20px
-		height: 20px
+		width: 1.25rem
+		height: 1.25rem
 		position: absolute
 		top: 50%
-		right: 16px
+		right: 1rem
 		color: #e7e7e7
 		transform: translateY(-50%)
 		+tr(all .3s ease)
 	+r(1100)
 		text-align: left
-		&__form
-			margin-right: auto
-			margin-left: 0
-
+		
 .footer-links
-	padding-top: 66px
-	padding-bottom: 122px
+	padding-top: 4.125rem
+	padding-bottom: 7.625rem
 	background-color: #f4f4f4
 	+r(980)
-		padding-bottom: 45px
+		padding-bottom: 2.8125rem
 .footer-copyright
 	background-color: #f4f4f4
-	padding-bottom: 50px
+	padding-bottom: 3.125rem
 
 .footer-services
-	padding-bottom: 50px
+	padding-bottom: 3.125rem
 	&__list
 		display: flex
 		justify-content: space-between
@@ -202,8 +197,8 @@ footer
 	&__link
 		font-weight: bold
 		img
-			max-width: 20px
-			margin-right: 13px
+			max-width: 1.25rem
+			margin-right: 0.8125rem
 
 	+r(850)
 		&__list
@@ -212,13 +207,13 @@ footer
 		&__item
 			max-width: 100%
 			width: 30%
-			margin-bottom: 16px
+			margin-bottom: 1rem
 	+r(620)
 		&__item
 			width: 50%
 		&__link
 			img
-				margin-right: 8px
+				margin-right: 0.5rem
 	+r(350)
 		&__item
 			width: 100%;
@@ -228,14 +223,14 @@ footer
 	&__link
 		display: inline-block
 		font-weight: bold
-		font-size: 14px
+		font-size: 0.875rem
 		line-height: 1.714
 		+tr(color .3s ease)
 		&::after
 			content: '|'
 			display: inline-block
-			font-size: 16px
-			padding: 0 16px
+			font-size: 1rem
+			padding: 0 1rem
 			color: #7f7f7f
 		&:last-child
 			&::after
@@ -260,7 +255,7 @@ footer
 	+r(680)
 		&__item
 			width: 100%
-			margin-bottom: 22px
+			margin-bottom: 1.4rem
 		&__map
 			width: 100%
 
