--- a/src/sass-old/_main-nav.sass
+++ b/src/sass-old/_main-nav.sass
@@ -1,11 +1,11 @@
 .nav-menu
 	width: 100%
-	height: 60px
+	height: 3.75rem
 	display: flex
 	align-items: center
 	background-color: $main-decor-color
-	padding-right: 16px
-	padding-left: 16px
+	padding-right: 1rem
+	padding-left: 1rem
 	position: fixed
 	z-index: 10
 	box-shadow: 0 0px 5px rgba(0,0,0,.4)
@@ -13,7 +13,7 @@
 	left: 0
 	&__list
 		display: flex
-		margin-left: 32px
+		margin-left: 2rem
 	&__btn-wrap
 		margin-left: auto
 		margin-right: 0
@@ -22,7 +22,7 @@
 		&:last-child
 			margin-right: 0
 	&__link
-		font-size: 16px
+		font-size: 1rem
 		font-weight: bold
 		line-height: 3.75
 		color: #000000
@@ -36,19 +36,13 @@
 		&__list
 			margin-left: 0
 		&__link
-			font-size: 14px
+			font-size: 0.875rem
 	+r(768)
 		padding-top: 15px
 		box-sizing: border-box
 		align-items: flex-start
 		&__list
 			display: none
-.nav-home-btn
-	display: inline-block
-	width: 32px
-	height: 25px
-	margin-left: 32px
-
 .nav-mob-btn
 	display: none
 	font-size: 20px
