--- a/src/sass-old/_repeat_block.sass
+++ b/src/sass-old/_repeat_block.sass
@@ -1,25 +1,25 @@
 .h1
 	color: #ffffff
-	font-size: 48px
+	font-size: 3rem
 	line-height: 1.042
 	font-weight: 400
 	+r(768)
-		font-size: 30px
+		font-size: 1.875rem
 .h2
 	color: #000000
-	font-size: 32px
+	font-size: 2rem
 	line-height: 1.75
 	font-weight: 400
 	+r(768)
-		font-size: 30px
+		font-size: 1.875rem
 .h3
 	color: #000000
-	font-size: 20px
+	font-size: 1.25rem
 	line-height: 1.7
 	font-weight: 400
 .h4
 	color: #000000
-	font-size: 18px
+	font-size: 1.125rem
 	line-height:  1.333
 	font-weight: 800
 
@@ -53,18 +53,18 @@
 .link-button
 	+link-btn( #000000,$main-decor-color, #f2db00, #edcd1c)
 	&_small
-		font-size: 14px
+		font-size: 0.875rem
 .link-border
 	+link-btn(#000000,$main-decor-color , #fff164)
 	border: 2px solid #000000
 
 .link-navigation
 	&__item
-		margin-bottom: 24px
+		margin-bottom: 1.5rem
 		&:last-child
 			margin-bottom: 0
 	&__link
-		font-size: 16px
+		font-size: 1rem
 		line-height: 1.5
 		font-weight: bold
 		color: #000000
@@ -80,7 +80,7 @@
 				background-color: #fff233
 				position: absolute
 				left: 0
-				bottom: -8px
+				bottom: -0.5rem
 		&:hover
 			color: #ecdc00
 	+r(440)
@@ -109,7 +109,7 @@
 
 .link-consultation
 	+link-btn( #000000,#ffffff, #f2db00, #edcd1c)
-	font-size: 14px
+	font-size: 0.875rem
 	margin: 0 auto
 
 .contacts-header
@@ -118,8 +118,8 @@
 	align-items: flex-end
 	color: #ffffff
 	width: 100%
-	max-width: 1256px
-	padding: 0 16px
+	max-width: 78.5rem
+	padding: 0 1rem
 	position: absolute
 	z-index: 7
 	top: 97px
@@ -132,16 +132,16 @@
 	&__link
 		display: flex
 		align-items: center
-		font-size: 21px
+		font-size: 1.3125rem
 		letter-spacing: -0.02em
-		margin-left: 37px
+		margin-left: 2.3rem
 		span
 			display: block
 			opacity: .5
 			margin-left: 10px
-			font-size: 9px
+			font-size: 0.5625rem
 			line-height: 1
-			max-width: 48px
+			max-width: 3rem
 	&.active
 		transform: translate(-50%, 0)
 		opacity: 1
@@ -161,7 +161,7 @@
 	&__title
 		width: 100%
 		position: relative
-		margin-bottom: 32px
+		margin-bottom: 2rem
 		display: flex
 		justify-content: space-between
 		align-items: center
@@ -222,90 +222,56 @@
 			margin-right: 0
 	// 	width: 30%
 	&__value
-		font-size: 48px
+		font-size: 3rem
 		line-height: 1.167
 		font-weight:bold
 	&__desc
-		max-width: 160px
+		max-width: 10rem
 	&_data
-		margin-top: 50px
-		margin-bottom: 65px
+		margin-top: 3.125rem
+		margin-bottom: 4.0625rem
 	+r(768)
 		&__item
 			margin-bottom: 16px
 		&__value
-			font-size: 38px
+			font-size: 2.375rem
 		&_data
-			margin-top: 40px
-			margin-bottom: 50px
-.news-item
-	width: 100%
-	margin-bottom: 60px
+			margin-top: 2.5rem
+			margin-bottom: 3.125rem
+.second-news
+	width: 50%
 	&__inner
 		display: flex
-		flex-wrap: wrap
 		width: 90%
 	&__img
 		width: 30%
-		&.top-news
-			width: 100%
 	&__short
 		max-width: 70%
 		padding-left: 30px
-		&.top-news
-			width: 100%
-			max-width: 100%
-			padding-left: 0
-			margin-top: 25px
 	&__text
 		color: #000000
-		margin-bottom: 17px
-	&__tags
-		display: inline-block
-		&::before
-			content: '|'
-			margin: 0 10px
-	&.news-index
-		width: 50%
-		margin-bottom: 0
-	&.top-news
-		width: 49%
 	+r(980)
 		width: 100%
-		margin-bottom: 40px
-		&.news-index
-			width: 100%
-			margin-bottom: 20px
-		&.top-news
-			margin-bottom: 40px
+		margin-bottom: 20px
 		&__inner
 			width: 95%
 	+r(620)
 		max-width: 400px
 		margin: 0 auto
 		margin-bottom: 30px
-		&.news-index
-			margin-bottom: 30px
-		&.top-news
-			width: 100%
-			margin-bottom: 30px
 		&__inner
 			width: 100%
+			flex-wrap: wrap
 		&__img
 			width: 100%
 			img
 				width: 100%
 		&__short
 			width: 100%
-			max-width: 100%
 			padding: 0
 			margin-top: 25px
 		&__text
 			margin-bottom: 10px
-
-.news-item.news-index
-	& .news-item__tags
-		display: none
 .v-style-text
 	display: inline-block
 	position: relative
@@ -313,12 +279,12 @@
 	&::before
 		content: ''
 		display: block
-		height: 24px
+		height: 1.5rem
 		width: 103%
 		background-color: $main-decor-color
 		position: absolute
 		z-index: -1
-		top: 6.4px
+		top: 0.4rem
 		left: -4px
 		transform: skew(-12deg)
 	+r(520)
@@ -331,18 +297,18 @@
 			display: none
 
 .breadcrumbs
-	margin-top: 45px
-	margin-bottom: 30px
+	margin-top: 2.8125rem
+	margin-bottom: 1.875rem
 	&__link
 		display: inline-block
-		font-size: 9px
+		font-size: 0.5625rem
 		line-height: 1
 		color: rgba(#000000, .5)
 		text-transform: uppercase
 		&::after
 			content: '/'
 			display: inline-block
-			padding: 0 8px
+			padding: 0 .5rem
 		&:last-child
 			pointer-events: none
 			&::after
@@ -397,112 +363,13 @@
 				object-fit: cover
 		&.fadeIn
 			opacity: 1
-/**/
-.content-wrap
-	display: flex
-	padding-bottom: 90px
-	+r(768)
-		flex-direction: column
-
-.side-bar
-	width: 25%
-	z-index: 2
-	// &__nav
-	// 	padding-bottom: 40px
-	+r(768)
-		width: 100%
-
-.side-bar-nav
-	&__mob-btn
-		display: none
-		font-size: 16px
-		line-height: 1.5
-		font-weight: bold
-		position: relative
-		+tr(all .3s ease)
-		&::after
-			content: '+'
-			display: block
-			position: absolute
-			right: -15px
-			top: 50%
-			transform: translateY(-50%)
-			+tr(all .3s ease)
-		&_visible
-			margin-bottom: 20px
-			&::after
-				transform: translateY(-50%) rotate(180deg)
-	+r(768)
-		border: 1px solid #a6a6a6
-		padding: 18px 30px 18px 15px
-		&__mob-btn
-			display: block
-		& .link-navigation
-			display: none
-
-.content-inner
-	width: 75%
-	&__title
-		line-height: 1.406
-	+r(768)
-		width: 100%
-		margin-top: 30px
-		&__title
-			font-size: 21px
-			line-height: 1.43
-
-.content-inner-item
-	border-top: 1px solid #cccccc
-	padding-top: 70px
-	padding-bottom: 60px
-	position: relative
-	&__title
-		margin-bottom: 60px
-	&__decor
-		position: absolute
-		top: 70px
-		right: 0
-		width: 80px
-		height: 90px
-		color: #f2db00
-	+r(1100)
-		padding-top: 50px
-		&__decor
-			top: 30px
-			width: 70px
-			height: 80px
-	+r(768)
-		padding-top: 40px
-		padding-bottom: 40px
-		&__title
-			margin-bottom: 40px
-
-.content-inner-group
-	border-bottom: 1px solid #cccccc
-	margin-bottom: 75px
-	&:last-child
-		border: none
-		margin-bottom: 0
-	&:last-child &__wrap
-			margin-bottom: 0
-	&__wrap
-		display: flex
-		flex-wrap: wrap
-		margin-bottom: 65px
-		&_mw
-			max-width: 714px
-	&__title
-		line-height: 1
-	+r(650)
-		&__wrap
-			justify-content: space-between
 
 .worker-item
 	display: flex
 	flex-direction: column
 	width: 22.26%
 	margin-right: 3.65%
-	margin-top: 70px
+	margin-bottom: 4.25rem
 	&:nth-child(4n)
 		margin-right: 0
 	&__photo
@@ -510,17 +377,17 @@
 		width: 100%
 		max-height: 204px
 		max-width: 204px
-		margin-bottom: 38px
+		margin-bottom: 2.375rem
 		img
 			display: block
 			max-width: 100%
 			margin: 0 auto
 	&__name
-		font-size: 18px
+		font-size: 1.125rem
 		line-height: 1.333
-		margin-bottom: 20px
+		margin-bottom: 1.25rem
 	&__position
-		font-size: 14px
+		font-size: 0.875rem
 		line-height: 1.714
 		color: #767a7d
 	+r(1024)
@@ -539,49 +406,6 @@
 		&__photo
 			max-height: 158px
 			max-width: 158px
-
-.document-item
-	display: flex
-	justify-content: space-between
-	align-items: flex-end
-	width: 100%
-	border-bottom: 1px solid #cccccc
-	padding-bottom: 40px
-	margin-top: 30px
-	&__info
-		max-width: 80%
-	&__date
-		font-size: 16px
-		line-height: 1.125
-		color: #767a7d
-		margin-bottom: 16px
-	&__title
-		font-size: 18px
-		line-height: 1
-		color: #000000
-		+tr(color .3s ease)
-	&__icon
-		width: 36px
-		height: 48px
-		color: #767a7d
-		margin-left: 20px
-		+tr(color .3s ease)
-	&:last-child
-		border: none
-		padding: 0
-	&:hover &__title
-		color: #5a5a5a
-	&:hover &__icon
-		color: #000000
-
-.sertificate-item
-	&__img
-		margin-bottom: 35px
-	&__title
-		font-weight: normal
-		margin-bottom: 20px
-		
-
 
 /* sliders */
 .custom_dots
@@ -626,17 +450,11 @@
 		height: 34px
 		font-size: 0
 
+
+
 /* animated block*/
 .fade-down
 	transform: translateY(100px)
-	opacity: 0
-	+tr(all .3s ease .35s)
-	&.active
-		transform: translateY(0)
-		opacity: 1
-
-.fade-up
-	transform: translateY(-50px)
 	opacity: 0
 	+tr(all .3s ease .35s)
 	&.active
@@ -647,65 +465,8 @@
 	transform: translateY(20px)
 	opacity: 0
 	+tr(all .3s ease .4s)
-
 .slick-initialized
 	.slick-slide.slick-current.slick-active
 		.slider-animate
 			transform: translateY(0)
 			opacity: 1
-
-
-/* modal */
-.modal-layout
-	position: fixed
-	left: 0
-	right: 0
-	bottom: 0
-	top: 0
-	width: 100%
-	height: 100%
-	margin: 0
-	background: transparent
-	z-index: 200
-	opacity: 0
-	visibility: hidden
-	transition: opacity .5s .1s, visibility .5s .1s, background-color .5s .1s
-	contain: paint 
-	overflow-y: auto
-	transition-delay: .5s
-	&.active
-		background: rgba(0,0,0, .3)
-		visibility: visible
-		opacity: 1
-		transition-delay: 0s
-		& .application-modal
-			transform: translateX(0)
-			opacity: 1
-		& .consultation-modal	
-			animation-name: show
-			animation-duration: 0.3s
-			animation-fill-mode: forwards
-
-.application-modal
-	background-color: #ffffff
-	position: absolute
-	top: 0
-	right: 0
-	transform: translateX(20%)
-	opacity: 0
-	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
-
-.consultation-modal
-	background-color: #fafafa
-	position: absolute
-	top: 50%
-	left: 50%
-	transform: translate(-50%, -50%)
-	
-@keyframes show
-	0%
-		opacity: 0
-		transform: scale3d(1.1, 1.1, 1) translate(-50%, -50%)
-	100%
-		opacity: 1 
-		transform: scale3d(1, 1, 1) translate(-50%, -50%)
