--- a/src/pug/sertificate-popup.pug
+++ b/src/pug/sertificate-popup.pug
@@ -1,39 +1,48 @@
+include includes/_mixins.pug
+
 .wrap
-	.modal-container
-		i.small-link.pop-close.closePopup
-		.sertificate-slider
-			.sertificate-slide
-				.sertificate-slide__image
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-				.sertificate-slide__info
-					.sertificate-slide__period 09.06.2017, бессрочно
-					.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
-					.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-			.sertificate-slide
-				.sertificate-slide__image
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-				.sertificate-slide__info
-					.sertificate-slide__period c 09.06.2017 по 10.10.2018
-					.sertificate-slide__title Tier III operational SUSTAINABILITY - GOLD
-					.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-			.sertificate-slide
-				.sertificate-slide__image
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-				.sertificate-slide__info
-					.sertificate-slide__period 09.06.2017, бессрочно
-					.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
-					.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-			.sertificate-slide
-				.sertificate-slide__image
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-				.sertificate-slide__info
-					.sertificate-slide__period c 09.06.2017 по 10.10.2018
-					.sertificate-slide__title Tier III operational SUSTAINABILITY - GOLD
-					.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
-			.sertificate-slide
-				.sertificate-slide__image
-					img(src="img/sertificate-2-big.jpg", alt="sertificate")
-				.sertificate-slide__info
-					.sertificate-slide__period 09.06.2017, бессрочно
-					.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
-					.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+	.modal-container.sertificate-modal
+		.modal-container-inner.sertificate-modal__inner
+			button(type="button").pop-close.closePopup
+				+icon('close')
+			.sertificate-slider
+				.sertificate-slide
+					.sertificate-slide__image
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+					.sertificate-slide__info
+						.sertificate-slide__period 09.06.2017, бессрочно
+						.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
+						.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+				.sertificate-slide
+					.sertificate-slide__image
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+					.sertificate-slide__info
+						.sertificate-slide__period c 09.06.2017 по 10.10.2018
+						.sertificate-slide__title Tier III operational SUSTAINABILITY - GOLD
+						.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+				.sertificate-slide
+					.sertificate-slide__image
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+					.sertificate-slide__info
+						.sertificate-slide__period 09.06.2017, бессрочно
+						.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
+						.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+				.sertificate-slide
+					.sertificate-slide__image
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+					.sertificate-slide__info
+						.sertificate-slide__period c 09.06.2017 по 10.10.2018
+						.sertificate-slide__title Tier III operational SUSTAINABILITY - GOLD
+						.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+				.sertificate-slide
+					.sertificate-slide__image
+						img(src="img/sertificate-2-big.jpg", alt="sertificate")
+					.sertificate-slide__info
+						.sertificate-slide__period 09.06.2017, бессрочно
+						.sertificate-slide__title Uptime Institute Tier III Certified: Constructed Facility
+						.sertificate-slide__description Аренда каналов до точек присутствия на крупнейших телекоммуникационных узлах а также каналы «точка-точка» до любого адреса
+			.sertificate-slider__nav
+					button(type="button",class="slick-prev").sertificate-slider__prev
+						+icon('arrow')
+					button(type="button", class="slick-next").sertificate-slider__next
+						+icon('arrow')
