--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -29,14 +29,28 @@
 		+tr(color .3s ease)
 		&:hover
 			color:#917d12
-	+r(1024)
+	&_scrolled
+		& .nav-home-btn
+			opacity: 1
+			width: 32px
+			margin-left: 32px
+	+r(1100)
+		&__list
+			margin-left: 20px
 		&__item
-			margin-right: 32px
+			margin-right: 24px
+		&_scrolled
+			& .nav-home-btn
+				margin-left: 20px
 	+r(980)
 		&__list
 			margin-left: 0
 		&__link
 			font-size: 14px
+		&_scrolled
+			& .nav-home-btn
+				margin-left: 0
+				margin-right: 20px
 	+r(768)
 		padding-top: 15px
 		box-sizing: border-box
@@ -45,9 +59,11 @@
 			display: none
 .nav-home-btn
 	display: inline-block
-	width: 32px
+	width: 0
 	height: 25px
-	margin-left: 32px
+	margin-left: 0
+	opacity: 0
+	+tr(all .3s ease)
 
 .nav-mob-btn
 	display: none
