--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -3,7 +3,7 @@ include includes/_mixins.pug
 
 
 block title
-	title Документация
+	title Галерея 
 block config
 	- var main = true
 block content
@@ -13,9 +13,9 @@ block content
 		.box
 			.header-inner.header-inner_inner-page
 				.header-inner__title.fade-down
-					h1.h1 Документация
+					h1.h1 Инфраструктура
 	.box
-		+breadcrumbs(['Главная', 'Сертификаты'])
+		+breadcrumbs(['Главная', 'Галерея'])
 	.box
 		.content-wrap
 			aside.side-bar.js-stick-parent
@@ -26,9 +26,10 @@ block content
 							+icon('arrow_down')
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
-				.data-sertificate.fade-down
-					+sertificate('09.06.2017', 'Uptime Institute Tier III Certified', 'sertificate-2-min.jpg', 0)
-					+sertificate('17.08.2017', 'Tier III operational SUSTAINABILITY - GOLD', 'sertificate-1-min.jpg', 1)
-					+sertificate('23.09.2017', 'Constructed facility', 'sertificate-2-min.jpg', 2)
-					+sertificate('17.08.2017', 'Tier III operational SUSTAINABILITY - GOLD', 'sertificate-1-min.jpg', 3)
-					+sertificate('09.06.2017', 'Uptime Institute Tier III Certified', 'sertificate-2-min.jpg', 4)
+				.gallery
+					//- gallery-block(img, title, count)
+					+gallery-block('gallery-1.jpg', 'Новый сервер', '18')
+					+gallery-block('gallery-2.jpg', 'Открытие отделения', '27')
+					+gallery-block('gallery-3.jpg', 'Концерт “Velcom”', '12')
+					+gallery-block('gallery-4.jpg', 'Лучшие 2017', '35')
+
