--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -49,6 +49,8 @@
 	height: 100%
 	margin: 0 auto
 	padding: 0 16px
+	&_inner
+		position: relative
 	
 .link-button
 	+link-btn( #000000,$main-decor-color, #f2db00, #edcd1c)
@@ -150,6 +152,8 @@
 			display: none
 
 .service-card
+	display: flex
+	flex-wrap: wrap
 	width: 30%
 	border: 1px solid #cccccc
 	padding: 38px 33px 33px 33px
@@ -172,6 +176,7 @@
 		color:  rgb(236, 239, 242)
 		+tr(all .3s ease)
 	&__desc
+		width: 100%
 		margin-bottom: 60px
 	&__link
 		position: absolute
@@ -420,17 +425,22 @@
 		font-weight: bold
 		position: relative
 		+tr(all .3s ease)
-		&::after
-			content: '+'
+		span.link-i-arrow
 			display: block
+			height: 5px
+			width: 8px
 			position: absolute
 			right: -15px
 			top: 50%
 			transform: translateY(-50%)
 			+tr(all .3s ease)
+			svg
+				position: absolute
+				top: 0
+				left: 0
 		&_visible
 			margin-bottom: 20px
-			&::after
+			span.link-i-arrow
 				transform: translateY(-50%) rotate(180deg)
 	+r(768)
 		border: 1px solid #a6a6a6
@@ -457,7 +467,7 @@
 	padding-bottom: 60px
 	position: relative
 	&__title
-		margin-bottom: 60px
+		margin-bottom: 55px
 	&__decor
 		position: absolute
 		top: 70px
@@ -581,7 +591,60 @@
 		font-weight: normal
 		margin-bottom: 20px
 		
+.infrastructure-links__item
+	display: inline-block
+	font-size: 14px
+	line-height: 1.714
+	padding: 9px 25px
+	border-radius: 2px
+	margin-right: 14px
+	margin-bottom: 17px
+	color: #767a7d
+	background-color: #ffffff
+	border: 1px solid #cccccc
+	+tr(all .3s ease)
+	&.active
+		color: #000000
+		background-color: #fdfcd5
+		border-color: #cdc115
+		pointer-events: none
+	&:hover
+		color: #000000
+		border-color: #000000
 
+.gallert-block
+	display: inline-block
+	width: 48%
+	margin-bottom: 70px
+	&__image
+		overflow: hidden
+		position: relative
+		margin-bottom: 36px
+		img
+			+tr(all .3s ease)
+		&::after
+			content: ''
+			display:block
+			background-color: rgba(#000000, .2)
+			position: absolute
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			opacity: 0
+			+tr(all .3s ease)
+	&:hover	&__image
+		img
+			transform: scale(1.1)
+		&::after
+			opacity: 1
+
+
+.pop-close
+	width: 18px
+	height: 18px
+	color: #000000
+	display: inline-block
 
 /* sliders */
 .custom_dots
@@ -626,11 +689,35 @@
 		height: 34px
 		font-size: 0
 
+.slider-counter
+	font-size: 0
+	+padlr(14px)
+	display: inline-block
+	vertical-align: middle
+	position: relative
+	&>div
+		display: inline-block
+		vertical-align: middle
+		+rem(font-size,16px)
+		color: color(textblk)
+		text-align: center
+	.slider-curr
+		font-weight: 600
+	.slider-divider
+		+padlr(5px)
+
+.inner-slider__prev,
+.inner-slider__next
+	width: 6px
+	height: 10px
+	color: #000000
+	&.slick-disabled
+		color: rgba(#000000, .5)
 /* animated block*/
 .fade-down
 	transform: translateY(100px)
 	opacity: 0
-	+tr(all .3s ease .35s)
+	+tr(all .3s ease .2s)
 	&.active
 		transform: translateY(0)
 		opacity: 1
@@ -653,59 +740,3 @@
 		.slider-animate
 			transform: translateY(0)
 			opacity: 1
-
-
-/* modal */
-.modal-layout
-	position: fixed
-	left: 0
-	right: 0
-	bottom: 0
-	top: 0
-	width: 100%
-	height: 100%
-	margin: 0
-	background: transparent
-	z-index: 200
-	opacity: 0
-	visibility: hidden
-	transition: opacity .5s .1s, visibility .5s .1s, background-color .5s .1s
-	contain: paint 
-	overflow-y: auto
-	transition-delay: .5s
-	&.active
-		background: rgba(0,0,0, .3)
-		visibility: visible
-		opacity: 1
-		transition-delay: 0s
-		& .application-modal
-			transform: translateX(0)
-			opacity: 1
-		& .consultation-modal	
-			animation-name: show
-			animation-duration: 0.3s
-			animation-fill-mode: forwards
-
-.application-modal
-	background-color: #ffffff
-	position: absolute
-	top: 0
-	right: 0
-	transform: translateX(20%)
-	opacity: 0
-	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
-
-.consultation-modal
-	background-color: #fafafa
-	position: absolute
-	top: 50%
-	left: 50%
-	transform: translate(-50%, -50%)
-	
-@keyframes show
-	0%
-		opacity: 0
-		transform: scale3d(1.1, 1.1, 1) translate(-50%, -50%)
-	100%
-		opacity: 1 
-		transform: scale3d(1, 1, 1) translate(-50%, -50%)
